# project-scene-classification

./: CMakeLists.txt  README.md
src/: AllFeatPairObject.cpp  AllFeatPairObject.hpp  ApiConvertKTHDB.cpp  ApiConvertKTHDB.cpp~  ApiConvertKTHDB.hpp~  ApiFeatureExtraction.cpp  ApiFeatureExtraction.cpp~  CMakeCache.txt  CMakeLists.txt~  DatabaseInformation.cpp  DatabaseInformation.cpp~  DatabaseInformation.hpp  DatabaseInformation.hpp~  FeatureInformation.cpp~  FeatureInformation.hpp  FeatureInformation.hpp~  FinalResults.txt  LOOCV.cpp  LOOCV.cpp~  LOOCV.hpp  LOOCV.hpp~  Makefile  Object.cpp  Object.cpp~  Object.hpp  Object.hpp~  ObjectFeatures.cpp  ObjectFeatures.cpp~  ObjectFeatures.hpp  ObjectFeatures.hpp~  ObjectPairFeatures.cpp  ObjectPairFeatures.cpp~  ObjectPairFeatures.hpp  ObjectPairFeatures.hpp~  README.txt  README.txt~  Res.txt~  Res2.txt  Res2.txt~  Results_all_scenes_LOOCV_sceneSimilarities.txt  (+30 more)
src/data/: 606-alejandro-24-06-13-afternoon.xml  606-alejandro-25-06-13-morning.xml  606-michele-24-06-13-morning.xml  606-michele-25-06-13-afternoon.xml  606-michele-26-06-13-morning.xml  609-21-06-13-afternoon.xml  609-25-06-13-afternoon.xml  714-25-06-13-afternoon.xml  719-21-06-13-afternoon.xml  719-24-06-13-morning.xml
src/data_full/: 606-alejandro-21-06-13-afternoon.xml  606-alejandro-26-06-13-morning.xml  606-alejandro-27-06-13-morning.xml  606-michele-24-06-13-afternoon.xml  606-michele-26-06-13-afternoon.xml  606-michele-27-06-13-morning.xml  609-27-06-13-morning.xml  710-24-06-13-morning.xml  714-27-06-13-morning.xml
src/data_more_objects/: 606-alejandro-21-06-13-afternoon.xml  606-alejandro-24-06-13-afternoon.xml  606-alejandro-24-06-13-morning.xml  606-alejandro-25-06-13-morning.xml  606-alejandro-26-06-13-morning.xml  606-alejandro-27-06-13-morning.xml  606-michele-21-06-13-afternoon.xml  606-michele-24-06-13-afternoon.xml  606-michele-24-06-13-morning.xml  606-michele-25-06-13-morning.xml  606-michele-26-06-13-afternoon.xml  606-michele-26-06-13-morning.xml  606-michele-27-06-13-morning.xml  609-25-06-13-afternoon.xml  609-26-06-13-morning.xml  710-21-06-13-afternoon.xml  714-21-06-13-afternoon.xml  714-24-06-13-afternoon.xml  714-26-06-13-morning.xml  719-24-06-13-afternoon.xml  719-25-06-13-afternoon.xml  719-27-06-13-morning.xml
src/mock_Duplicate/: 719-25-06-13-morning_keyboard.xml~  719-25-06-13-morning_monitor.xml~  719-25-06-13-morning_mouse.xml  719-25-06-13-morning_mouse.xml~  scene.xml  scene.xml~
src/scene_object_classification/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/scene_object_classification/data/SceneSimilarityScoresExperimentsResults/1/: 0.txt  0.txt~  1.txt  1.txt~  2.txt  2.txt~  3.txt  3.txt~  4.txt  4.txt~  5.txt  5.txt~  6.txt  6.txt~
src/scene_object_classification/data/data/: 606-alejandro-24-06-13-morning.xml  606-alejandro-25-06-13-afternoon.xml  606-michele-21-06-13-afternoon.xml  606-michele-25-06-13-morning.xml  609-24-06-13-morning.xml  609-26-06-13-morning.xml  710-25-06-13-morning.xml  714-21-06-13-afternoon.xml  714-24-06-13-morning.xml  714-25-06-13-morning.xml  714-26-06-13-morning.xml  719-27-06-13-morning.xml
src/scene_object_classification/data/data_full/: 609-24-06-13-afternoon.xml  609-25-06-13-morning.xml  710-21-06-13-afternoon.xml  710-24-06-13-afternoon.xml  710-25-06-13-afternoon.xml  710-26-06-13-morning.xml  710-27-06-13-morning.xml  714-24-06-13-afternoon.xml  719-25-06-13-afternoon.xml
src/scene_object_classification/data/data_more_objects/: 606-alejandro-25-06-13-afternoon.xml  606-michele-25-06-13-afternoon.xml  606-michele-27-06-13-morning.xml  609-21-06-13-afternoon.xml  609-24-06-13-afternoon.xml  609-24-06-13-morning.xml  609-25-06-13-morning.xml  609-27-06-13-morning.xml  710-24-06-13-morning.xml  710-25-06-13-morning.xml  710-27-06-13-morning.xml  714-24-06-13-morning.xml  714-25-06-13-afternoon.xml  714-25-06-13-morning.xml  714-27-06-13-morning.xml  719-24-06-13-morning.xml  719-25-06-13-morning.xml
src/scene_object_classification/data/data_simulation/simulation/: bham_office_desk_500_modifiedroot2.json  bham_office_desk_500_modifiedroot3.json
src/scene_object_classification/data/mock_Duplicate/: 710-25-06-13-afternoonNotebook.xml  719-25-06-13-morning_keyboard.xml  719-25-06-13-morning_monitor.xml  719-27-06-13-morningPhone.xml
src/scene_object_classification/data/tmp/: 710-24-06-13-afternoon.xml  710-25-06-13-afternoon.xml  710-26-06-13-morning.xml
src/scene_object_classification/results/: FinalResults.txt  Res.txt  Results_Normalization.txt  TO_DO_LIST_2.txt  check1gmm
src/scene_object_classification/src/: AllFeatSingleObject.cpp  AllFeatSingleObject.hpp  ApiConvertKTHDB.cpp  ApiConvertKTHDB.hpp  ApiConvertSimulationDB.cpp  ApiConvertSimulationDB.cpp~  ApiConvertSimulationDB.hpp  ApiConvertSimulationDB.hpp~  ApiFeatureExtraction.cpp  ApiFeatureExtraction.cpp~  ApiFeatureExtraction.hpp  DatabaseInformation.cpp  DatabaseInformation.cpp~  DatabaseInformation.hpp  DatabaseInformation.hpp~  FeatureInformation.cpp  LOOCV.cpp  Object.cpp  Object.cpp~  Object.hpp  Object.hpp~  ObjectFeatures.cpp  ObjectFeatures.hpp  ObjectPairFeatures.cpp  SceneInformation.cpp  SceneInformation.hpp  TO_DO_LIST.txt  TestScene.cpp  TestScene.cpp~  TestScene.hpp  Training.cpp  Training.cpp~  Training.hpp  Training.hpp~  fileOut2.txt  object_class_prediction_service.cpp  object_class_prediction_service.cpp~  sceneList  test.cpp  test0.cpp  (+2 more)
